Try fix (own) broken styles

--- a/frontend/styles/common.styl
+++ b/frontend/styles/common.styl
@@ -442,9 +442,7 @@
   transition-duration 0.5s
   transition-property opacity,filter
   opacity 1
-
-@media not (max-width:567px)
-  .vote-list-box
+  @media (min-width:568px)
     display inline-block
     position absolute
     border-color #58b
@@ -465,9 +463,7 @@
       top 40px
     .close-button
       display none
-
-@media (max-width:567px)
-  .vote-list-box
+  @media (max-width:567px)
     position fixed
     left 0
     top 0
@@ -482,9 +478,7 @@
 
 .vote-list-wrapper
   overflow-y hidden
-
-@media not (max-width:567px)
-  .vote-list-wrapper
+  @media (min-width:568px)
     max-height 320px
 
 .vote-list
